# pelican-random-article

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
src/pelican/plugins/random_article/: __init__.py  random_article.py
tests/: test_random_article.py
